--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
   --color-primary: #ffff;
   --color-secondary: #000;
   --color-tertiary: #14b8a6;
+  --color-bg: #fafafa;
 }
 
 html {
@@ -60,7 +61,7 @@ nav > div {
   color: var(--color-tertiary);
 }
 
-.skill {
+.position {
   font-size: 1.6rem;
   padding: 0 0.3rem;
   font-weight: lighter;
@@ -141,7 +142,7 @@ nav > div {
   width: 92%;
 }
 
-.hero-heading-primary {
+.heading-primary {
   font-size: 2rem;
   text-transform: uppercase;
   letter-spacing: 3px;
@@ -150,13 +151,12 @@ nav > div {
   font-weight: 800;
 }
 
-.hero-heading-info {
+.heading-info {
   margin: 3rem auto 0 auto;
-  /* max-width: 80rem; */
 }
 
-.hero-text-primary {
-  color: var(--color-secondary);
+.text-primary {
+  color: var(--color-secondary) !important;
   font-size: 1.4rem;
   text-align: center;
   width: 100%;
@@ -233,162 +233,49 @@ nav > div {
   display: none;
 }
 
-/* media queries */
-/* Small devices (landscape phones, 576px and up) */
-@media only screen and (min-width: 576px) {
-  nav > div {
-    padding: 0 3rem !important;
-  }
-
-  .btn-close-custom {
-    margin-right: 3rem !important;
-  }
-
-  .hero-heading-primary {
-    font-size: 3rem;
-  }
-
-  .hero-heading-info {
-    max-width: 80rem;
-  }
-
-  .hero-text-primary {
-    font-size: 1.8rem;
-    line-height: 1.5;
-  }
-
-  .hero-banner-logo {
-    width: 4rem;
-    height: 4rem;
-    font-size: 1.8rem;
-  }
-
-  .level {
-    font-size: 1.8rem;
-    letter-spacing: 1px;
-  }
-
-  .level-desc {
-    font-size: 1.6rem;
-    letter-spacing: 0.5px;
-  }
-
-  .hero-banner-bar {
-    background: var(--color-tertiary);
-    width: 2px;
-    height: 51px;
-  }
-
-  .btn-bg {
-    padding: 1.5rem 3rem;
-  }
+/* skills section */
+.skills-section {
+  padding: 10rem 0;
+  background: var(--color-bg);
 }
 
-/* Medium devices (tablets, 768px and up) */
-@media only screen and (min-width: 768px) {
-  nav > div {
-    padding: 0 5rem !important;
-  }
-
-  .btn-close-custom {
-    margin-right: 5rem !important;
-  }
-
-  .name-tag {
-    font-size: 2.2rem;
-  }
-
-  .line {
-    font-size: 2.2rem;
-  }
-
-  .hero-heading-primary {
-    font-size: 4rem;
-  }
-
-  .hero-text-primary {
-    font-size: 2.2rem;
-  }
-
-  .hero-banner-logo {
-    width: 8rem;
-    height: 8rem;
-    font-size: 4rem;
-  }
-
-  .level {
-    font-size: 2rem;
-    letter-spacing: 2px;
-  }
-
-  .level-desc {
-    font-size: 1.8rem;
-  }
-
-  .hero-banner-bar {
-    height: 80px;
-  }
-
-  .btn-bg {
-    padding: 1.5rem 4rem;
-  }
+.skills-content {
+  max-width: 90rem;
+  width: 92%;
+  margin: 0 auto;
 }
 
-/* Large devices (desktops, 992px and up) */
-@media only screen and (min-width: 992px) {
-  .nav-link {
-    font-size: 1.8rem;
-    padding: 0 0 0 2.5rem !important;
-  }
-
-  .hero-socials {
-    display: block;
-    margin-left: -0.7rem;
-    border-radius: 0 5px 5px 0;
-    position: absolute;
-    top: 27%;
-    transform: translateY(-50%);
-    background: var(--color-primary);
-    box-shadow: rgba(100, 100, 111, 0.2) 0 7px 29px 0;
-    padding: 0.5rem;
-  }
-
-  .hero-social {
-    width: 5rem;
-  }
-
-  .hero-social-icon-link {
-    width: 100%;
-    display: block;
-    padding: 1.2rem;
-    border-radius: 5px;
-    transition: background 0.3s;
-  }
-
-  .hero-social-icon {
-    width: 100%;
-    border-radius: 50%;
-  }
-
-  .hero-social-icon-link:hover {
-    background: var(--color-tertiary);
-  }
+.heading-skills {
+  position: relative;
 }
 
-/* X-Large devices (large desktops, 1200px and up) */
-@media (min-width: 1200px) {
-  .nav-link {
-    padding: 0 0 0 6rem !important;
-  }
+.heading-skills::after {
+  content: "";
+  width: 100%;
+  height: 1px;
+  background: var(--color-tertiary);
+  border-radius: 10px;
+  position: absolute;
+  top: calc(100% + 1rem);
+  left: 50%;
+  transform: translateX(-50%);
 }
 
-/* XX-Large devices (larger desktops, 1400px and up) */
-@media (min-width: 1400px) {
-  .nav-link {
-    padding: 0 0 0 8rem !important;
-  }
+.skills {
+  grid-template-columns: repeat(3, 1fr);
+  gap: 1rem;
+  margin: 10rem 0;
+}
 
-  .hero-heading-primary {
-    font-size: 5rem;
-  }
+.skill {
+  padding: 1rem;
+  width: 50%;
+}
+
+.img-tag {
+  color: var(--color-secondary);
+  font-size: 1.4rem;
+  font-weight: 700;
+  text-transform: uppercase;
+  line-height: 1.4;
 }
