--- a/style.css
+++ b/style.css
@@ -155,7 +155,7 @@ nav > div {
   margin: 3rem auto 0 auto;
 }
 
-.text-primary {
+.text--primary {
   color: var(--color-secondary) !important;
   font-size: 1.4rem;
   text-align: center;
