--- a/media-queries.css
+++ b/media-queries.css
@@ -77,7 +77,7 @@
     font-size: 2.2rem;
   }
 
-  .text-skills {
+  .text-secondary {
     text-align: justify;
   }
 
@@ -125,6 +125,33 @@
   .skill {
     padding: 1rem;
     width: 30%;
+  }
+
+  .projects {
+    grid-template-columns: 30rem 1fr;
+  }
+
+  .projects-link a,
+  .projects-link button {
+    text-align: justify !important;
+  }
+
+  .card-title {
+    font-size: 2.2rem;
+    line-height: 1.5;
+  }
+
+  .card-text {
+    font-size: 1.6rem;
+  }
+
+  .card-text--sm {
+    font-size: 1.2rem;
+  }
+
+  .projects-link {
+    width: 100%;
+    transform: none;
   }
 }
 
