completed about, contact and footer sections and implemented designs for all screen types

--- a/media-queries.css
+++ b/media-queries.css
@@ -12,10 +12,6 @@
     font-size: 3rem;
   }
 
-  .heading-info {
-    max-width: 80rem;
-  }
-
   .text--primary,
   .img-tag {
     font-size: 1.8rem;
@@ -70,6 +66,10 @@
   .heading-primary {
     font-size: 4rem;
     grid-area: heading; /* to use for skills section */
+  }
+
+  .heading-secondary {
+    font-size: 3rem !important;
   }
 
   .text--primary,
@@ -153,6 +153,10 @@
     width: 100%;
     transform: none;
   }
+
+  .text--footer {
+    font-size: 1.8rem !important;
+  }
 }
 
 /* Large devices (desktops, 992px and up) */
@@ -174,25 +178,29 @@
     padding: 0.5rem;
   }
 
-  .hero-social {
-    width: 5rem;
+  .contacts {
+    grid-template-columns: 1fr 1fr 1fr;
   }
 
-  .hero-social-icon-link {
-    width: 100%;
-    display: block;
-    padding: 1.2rem;
-    border-radius: 5px;
-    transition: background 0.3s;
+  .footer-section {
+    height: 50rem;
   }
 
-  .hero-social-icon {
-    width: 100%;
-    border-radius: 50%;
+  .footer {
+    grid-template-columns: 1fr 35rem;
+    gap: 2rem;
   }
 
-  .hero-social-icon-link:hover {
-    background: var(--color-tertiary);
+  .footer::after {
+    top: calc(75%);
+  }
+
+  .footer-left {
+    order: -1;
+  }
+
+  .footer-right-nav {
+    display: none;
   }
 }
 
